--- a/src/components/AgencyLastProjects.astro
+++ b/src/components/AgencyLastProjects.astro
@@ -44,6 +44,6 @@ const projects = [
     </div>
   </div>
   <div class="flex justify-center">
-    <Button text="découvrir plus de réalisations" url="" />
+    <Button text="découvrir plus de réalisations" url="/realisations" />
   </div>
 </div>
