--- a/src/components/AgencyServices.astro
+++ b/src/components/AgencyServices.astro
@@ -5,39 +5,46 @@ const services: Service[] = [
   {
     title: 'SUPPORTS IMPRIMÉS',
     buttonLink: '/services/supports-imprimes',
-    description:
+    description: [
       'papeterie | étiquette | packaging | enseigne | signalétique | marquage vehicule & vitrine | documents professionnels | goodies',
+    ],
     number: '01',
     subtitle: 'adaptés à vos besoins.',
+    isButton: true,
   },
   {
     title: 'SUPPORT WEB',
-    buttonLink: '/services/supports-imprimes',
-    description: 'site internet vitrine | refonte site internet | maintenance | mise à jour',
+    buttonLink: '/services/site-web',
+    description: ['site internet vitrine | refonte site internet | maintenance | mise à jour'],
     number: '02',
     subtitle: 'responsive et personnalisé.',
+    isButton: true,
   },
   {
     title: 'IDENTITÉ DE MARQUE',
-    buttonLink: '/services/supports-imprimes',
-    description: 'identité visuelle | logotype | charte graphique | refonte identité visuelle',
+    buttonLink: '/services/identite-visuelle',
+    description: ['identité visuelle | logotype | charte graphique | refonte identité visuelle'],
     number: '03',
     subtitle: 'un univers qui vous ressemble.',
+    isButton: true,
   },
   {
     title: 'CONTENU DIGITAL',
-    buttonLink: '/services/supports-imprimes',
-    description: 'shooting photos | montage vidéo | création de visuels réseaux sociaux',
+    buttonLink: '/services/contenu-digital',
+    description: ['shooting photos | montage vidéo | création de visuels réseaux sociaux'],
     number: '04',
     subtitle: 'des visuels dynamiques.',
+    isButton: true,
   },
   {
     title: 'CONSEIL & SUIVI',
-    buttonLink: '/services/supports-imprimes',
-    description: 'gestion de projet | suivi personnalisé | formation',
+    buttonLink: '/services/conseil-suivi',
+    description: ['gestion de projet | suivi personnalisé | formation'],
     number: '05',
     subtitle: 'une stratégie efficace.',
     color: '#cc9f5c',
+
+    isButton: true,
   },
 ];
 ---
@@ -49,14 +56,14 @@ const services: Service[] = [
       {services.map((service) => <OneService {...service} />)}
     </div>
     <div
-      class="bottom-0 right-0 z-10 flex w-full flex-col gap-5 bg-marron_fonce p-12 text-right font-larken text-4xl text-background md:absolute md:w-fit md:translate-y-1/3"
+      class="bottom-0 right-0 select-none z-10 flex w-full flex-col gap-5 bg-marron_fonce p-12 text-right font-larken text-4xl text-background md:absolute md:w-fit md:translate-y-1/3"
     >
-      <a href="#" class="hover:opacity-75" id="text-orange">CONSEIL</a>
-      <a href="#" class="hover:opacity-75" id="text-orange">CRÉATIVITÉ</a>
-      <a href="#" class="hover:opacity-75" id="text-orange">PRÉCISION</a>
-      <a href="#" class="hover:opacity-75" id="text-orange">DISPONIBILTÉ</a>
-      <a href="#" class="hover:opacity-75" id="text-orange">PROXIMITÉ</a>
-      <a href="#" class="hover:opacity-75" id="text-orange">RÉACTIVITÉ</a>
+      <p class="hover:opacity-75" id="text-orange">CONSEIL</p>
+      <p class="hover:opacity-75" id="text-orange">CRÉATIVITÉ</p>
+      <p class="hover:opacity-75" id="text-orange">PRÉCISION</p>
+      <p class="hover:opacity-75" id="text-orange">DISPONIBILTÉ</p>
+      <p class="hover:opacity-75" id="text-orange">PROXIMITÉ</p>
+      <p class="hover:opacity-75" id="text-orange">RÉACTIVITÉ</p>
     </div>
   </div>
 </div>
