--- a/src/components/subcomponents/Button.astro
+++ b/src/components/subcomponents/Button.astro
@@ -3,15 +3,36 @@ export type Props = {
   url: string;
   text: string;
   color?: string;
+  variant?: 'dark' | 'orange' | 'light';
 };
 
-const { url, text, color } = Astro.props;
+const { url, text, color, variant } = Astro.props;
 ---
 
-<a
-  class="mt-2 w-fit border border-black/20 px-6 py-2 font-poppins text-sm text-black/60 transition ease-in-out hover:bg-marron_fonce hover:text-white"
-  href={url}
-  style={`color: ${color};border-color: ${color};`}
->
-  {text}
-</a>
+{
+  variant === 'dark' ? (
+    <a
+      class="mt-2 w-fit border border-black/20 px-8 py-2 font-poppins text-sm text-black/60 transition ease-in-out bg-marron_fonce hover:bg-orange text-white"
+      href={url}
+      style={`color: ${color};border-color: ${color};`}
+    >
+      {text}
+    </a>
+  ) : variant === 'orange' ? (
+    <a
+      class="mt-2 w-fit px-8 py-2 font-poppins text-sm border hover:border-black/20 hover:text-black/60 text-white transition ease-in-out bg-orange hover:bg-background hover:text-white"
+      href={url}
+      style={`color: ${color};border-color: ${color};`}
+    >
+      {text}
+    </a>
+  ) : (
+    <a
+      class="mt-2 w-fit border border-black/20 px-8 py-2 font-poppins text-sm text-black/60 transition ease-in-out hover:bg-marron_fonce hover:text-white"
+      href={url}
+      style={`color: ${color};border-color: ${color};`}
+    >
+      {text}
+    </a>
+  )
+}
