--- a/src/components/subcomponents/LogoWithProgressBar.astro
+++ b/src/components/subcomponents/LogoWithProgressBar.astro
@@ -1,9 +1,14 @@
 ---
 import LogoIcon from '../Icons/LogoIcon.astro';
+
+export type Props = {
+  color?: string;
+};
+const { color } = Astro.props;
 ---
 
-<div class="flex items-end gap-12">
-  <LogoIcon classes="w-[150px] min-w-[150px] " />
+<div class="flex items-end gap-12" style=`color: ${color}`>
+  <LogoIcon classes="w-[150px] min-w-[150px]" />
   <div class="flex w-full justify-end pb-3">
     <div class="progress relative bg-black/90">
       <div
