--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -14,8 +14,20 @@ import LogoIcon from '../components/Icons/LogoIcon.astro';
             xmlns:xlink="http://www.w3.org/1999/xlink"
             viewBox="0 0 88.29 88.69"
             class="px- h-20 w-20 px-5"
-            fill="currentColor"
           >
+            <style>
+              .cls-1 {
+                fill: none;
+              }
+
+              .cls-2 {
+                clip-path: url(#clippath);
+              }
+
+              .cls-3 {
+                fill: white;
+              }
+            </style>
             <g class="cls-2">
               <path
                 class="cls-3"
@@ -48,21 +60,21 @@ import LogoIcon from '../components/Icons/LogoIcon.astro';
     </div>
     <div class="grid grid-cols-6">
       <div class="col-span-5 col-start-3 grid h-fit grid-cols-1 gap-y-5 text-sm min-[400px]:col-start-2 sm:grid-cols-3">
-        <div class="flex max-w-xs flex-col gap-3">
-          <a href="" class="font-larken">LES SERVICES</a>
-          <a href="">SUPPORT IMPRIMÉS</a>
-          <a href="">SITE WEB VITRINE</a>
-          <a href="">IDENTITÉ VISUELLE</a>
-          <a href="">CONTENU DIGITAL</a>
-          <a href="">CONSEIL & SUIVI</a>
+        <div class="flex max-w-xs select-none flex-col gap-3">
+          <p class="font-larken">LES SERVICES</p>
+          <a href="/services/supports-imprimes" class="w-fit hover:text-marron_fonce">SUPPORT IMPRIMÉS</a>
+          <a href="/services/site-web" class="w-fit hover:text-marron_fonce">SITE WEB VITRINE</a>
+          <a href="/services/identite-visuelle" class="w-fit hover:text-marron_fonce">IDENTITÉ VISUELLE</a>
+          <a href="/services/contenu-digital" class="w-fit hover:text-marron_fonce">CONTENU DIGITAL</a>
+          <a href="/services/conseil-suivi" class="w-fit hover:text-marron_fonce">CONSEIL & SUIVI</a>
         </div>
         <div class="col-span-2 flex flex-col justify-between gap-y-4">
           <div class="grid max-w-md grid-cols-1 gap-y-5 sm:grid-cols-2">
-            <div class="flex flex-col gap-3">
-              <a href="" class="font-larken">EN SAVOIR PLUS</a>
-              <a href="">À PROPOS</a>
-              <a href="">RÉALISATIONS</a>
-              <a href="">CONTACT</a>
+            <div class="flex flex-col gap-3 select-none">
+              <p class="font-larken">EN SAVOIR PLUS</p>
+              <a href="/a-propos" class="w-fit hover:text-marron_fonce">À PROPOS</a>
+              <a href="/realisation" class="w-fit hover:text-marron_fonce">RÉALISATIONS</a>
+              <a href="/contact" class="w-fit hover:text-marron_fonce">CONTACT</a>
             </div>
             <div class="flex flex-col gap-3">
               <p class="font-larken">HORAIRES</p>
