--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -2,21 +2,166 @@
 import LogoIcon from '../components/Icons/LogoIcon.astro';
 ---
 
-<div class="mt-5 flex justify-center md:px-20">
-  <div class="flex w-full max-w-5xl items-center justify-between border-b-2 border-black/90 text-black/90 max-md:px-8">
-    <LogoIcon classes="md:w-[150px] w-[100px] py-10" />
+<div class="mt-5 flex justify-center md:px-20 select-none">
+  <div
+    id="header-container"
+    class="flex w-full max-w-5xl items-center justify-between border-b-2 border-black/90 text-black/90 max-md:px-8"
+  >
+    <a href="/"><LogoIcon classes="md:w-[150px] w-[100px] py-10" /></a>
     <div class="flex gap-10 max-md:hidden">
       <a href="/a-propos" class="hover:text-orange">À PROPOS</a>
-      <a href="/services" class="hover:text-orange">SERVICES</a>
+      <div class="relative">
+        <a id="open-close-services" class="hover:text-orange cursor-pointer">SERVICES</a>
+        <div id="services-dropdown" class="hidden">
+          <div
+            class="absolute bg-orange whitespace-nowrap flex flex-col py-5 px-5 gap-1 text-background -translate-x-5 top-full translate-y-[57px]"
+          >
+            <a href="/services/supports-imprimes" class="hover:text-marron_fonce">SUPPORT IMPRIMÉS</a>
+            <a href="/services/site-web" class="hover:text-marron_fonce">SITE WEB VITRINE</a>
+            <a href="/services/identite-visuelle" class="hover:text-marron_fonce">IDENTITÉ DE MARQUE</a>
+            <a href="/services/contenu-digital" class="hover:text-marron_fonce">CONTENU DIGITAL</a>
+            <a href="/services/conseil-suivi" class="hover:text-marron_fonce">CONSEIL & SUIVI</a>
+          </div>
+        </div>
+      </div>
       <a href="/realisations" class="hover:text-orange">RÉALISATIONS</a>
       <a href="/contact" class="hover:text-orange">CONTACT</a>
     </div>
-    <div class="cursor-pointer hover:text-orange md:hidden">
-      <svg width="25px" height="25px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M4 18L20 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"></path>
-        <path d="M4 12L20 12" stroke="currentColor" stroke-width="2" stroke-linecap="round"></path>
-        <path d="M4 6L20 6" stroke="currentColor" stroke-width="2" stroke-linecap="round"></path>
+    <button
+      id="open-close-mobile"
+      class="cursor-pointer hover:text-orange md:hidden z-[51] menu"
+      onclick="toggleMobileMenu()"
+            aria-label="Main Menu"
+    >
+      <svg width="30" height="30" viewBox="0 0 100 100">
+        <path
+          class="line line1"
+          d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058"
+        ></path>
+        <path class="line line2" d="M 20,50 H 80"></path>
+        <path
+          class="line line3"
+          d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942"
+        ></path>
       </svg>
+    </button>
+    <div id="mobile-menu-container" class="hidden fixed z-50 top-0 bottom-0 left-0 right-0 bg-background">
+      <div class="flex flex-col items-center justify-center h-full gap-6">
+        <a href="/a-propos" class="hover:text-orange">À PROPOS</a>
+        <div class="group relative">
+          <a class="hover:text-orange cursor-pointer">SERVICES</a>
+          <div
+            class="absolute group-hover:flex hidden bg-orange whitespace-nowrap flex-col py-5 px-5 gap-1 text-background left-1/2 -translate-x-1/2"
+          >
+            <a href="/services/supports-imprimes" class="hover:text-marron_fonce">SUPPORT IMPRIMÉS</a>
+            <a href="/services/site-web" class="hover:text-marron_fonce">SITE WEB VITRINE</a>
+            <a href="/services/identite-visuelle" class="hover:text-marron_fonce">IDENTITÉ DE MARQUE</a>
+            <a href="/services/contenu-digital" class="hover:text-marron_fonce">CONTENU DIGITAL</a>
+            <a href="/services/conseil-suivi" class="hover:text-marron_fonce">CONSEIL & SUIVI</a>
+          </div>
+        </div>
+        <a href="/realisations" class="hover:text-orange">RÉALISATIONS</a>
+        <a href="/contact" class="hover:text-orange">CONTACT</a>
+      </div>
     </div>
   </div>
 </div>
+
+<script is:inline>
+let openServices = false;
+const dropdown = document.getElementById('services-dropdown');
+const headerContainer = document.getElementById('header-container');
+document.addEventListener('click', function (e) {
+  if (e.target.id === 'open-close-services') {
+    openServices = !openServices;
+    if (openServices && e.target.id === 'open-close-services') {
+      openDropdown();
+      return;
+    }
+  }
+  closeDropdown();
+});
+
+function closeDropdown() {
+  openServices = false;
+  dropdown.style.display = 'none';
+  headerContainer.classList.remove('border-orange');
+}
+
+function openDropdown() {
+  openServices = true;
+  dropdown.style.display = 'block';
+  headerContainer.classList.add('border-orange');
+}
+
+let openMobile = false;
+const openCloseMobile = document.getElementById('open-close-mobile');
+const mobileMenuContainer = document.getElementById('mobile-menu-container');
+
+function toggleMobileMenu() {
+  openMobile = !openMobile;
+  if (openMobile) {
+    openMobileMenu();
+    return;
+  }
+  closeMobileMenu();
+}
+
+function openMobileMenu() {
+  openMobile = true;
+  openCloseMobile.classList.add('opened');
+  openCloseMobile.setAttribute('aria-expanded', openCloseMobile.classList.contains('opened'));
+  mobileMenuContainer.style.display = 'block';
+}
+
+function closeMobileMenu() {
+  openMobile = false;
+  openCloseMobile.classList.remove('opened');
+  openCloseMobile.setAttribute('aria-expanded', openCloseMobile.classList.contains('opened'));
+  mobileMenuContainer.style.display = 'none';
+}
+</script>
+
+<style>
+  .menu {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    padding: 0;
+  }
+  .line {
+    fill: none;
+    stroke: currentColor;
+    stroke-width: 6;
+    transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+      stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .line1 {
+    stroke-dasharray: 60 207;
+    stroke-width: 6;
+  }
+  .line2 {
+    stroke-dasharray: 60 60;
+    stroke-width: 6;
+  }
+  .line3 {
+    stroke-dasharray: 60 207;
+    stroke-width: 6;
+  }
+  .opened .line1 {
+    stroke-dasharray: 90 207;
+    stroke-dashoffset: -134;
+    stroke-width: 6;
+  }
+  .opened .line2 {
+    stroke-dasharray: 1 60;
+    stroke-dashoffset: -30;
+    stroke-width: 6;
+  }
+  .opened .line3 {
+    stroke-dasharray: 90 207;
+    stroke-dashoffset: -134;
+    stroke-width: 6;
+  }
+</style>
