--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -5,9 +5,16 @@ import LogoIcon from '../components/Icons/LogoIcon.astro';
 <div>
   <div class="grid w-full items-center gap-y-10 bg-orange py-10 text-white/80 xl:grid-cols-2">
     <div class="relative flex h-full items-center justify-center max-xl:row-start-2">
-      <a href="/"> <LogoIcon classes="max-w-[190px] w-[190px] min-w-[190px] py-20" /></a>
+      <a href="/" aria-label="Retour a la page d'accueil">
+        <LogoIcon classes="max-w-[190px] w-[190px] min-w-[190px] py-20" /></a
+      >
       <div class="absolute bottom-0 translate-y-3/4 rounded-full bg-orange">
-        <a href="https://www.instagram.com/jolilot.atelier/" target="_blank" referrerpolicy="no-referrer">
+        <a
+          href="https://www.instagram.com/jolilot.atelier/"
+          aria-label="Ma page instagram @jolilot.atelier"
+          target="_blank"
+          referrerpolicy="no-referrer"
+        >
           <svg
             id="Calque_1"
             xmlns="http://www.w3.org/2000/svg"
