--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -5,13 +5,13 @@ import LogoIcon from '../components/Icons/LogoIcon.astro';
 <div class="mt-5 flex justify-center md:px-20 select-none">
   <div
     id="header-container"
-    class="flex w-full max-w-5xl items-center justify-between border-b-2 border-black/90 text-black/90 max-md:px-8"
+    class="flex w-full max-w-5xl items-center justify-between border-b border-black/90 text-black/90 max-md:px-8"
   >
-    <a href="/"><LogoIcon classes="md:w-[150px] w-[100px] py-10" /></a>
+    <a href="/" aria-label="Retour a la page d'accueil"><LogoIcon classes="md:w-[150px] w-[100px] py-10" /></a>
     <div class="flex gap-10 max-md:hidden">
       <a href="/a-propos" class="hover:text-orange">À PROPOS</a>
       <div class="relative">
-        <a id="open-close-services" class="hover:text-orange cursor-pointer">SERVICES</a>
+        <button id="open-close-services" class="hover:text-orange cursor-pointer">SERVICES</button>
         <div id="services-dropdown" class="hidden">
           <div
             class="absolute bg-orange whitespace-nowrap flex flex-col py-5 px-5 gap-1 text-background -translate-x-5 top-full translate-y-[57px]"
@@ -49,7 +49,7 @@ import LogoIcon from '../components/Icons/LogoIcon.astro';
       <div class="flex flex-col items-center justify-center h-full gap-6">
         <a href="/a-propos" class="hover:text-orange">À PROPOS</a>
         <div class="group relative">
-          <a class="hover:text-orange cursor-pointer">SERVICES</a>
+          <button class="hover:text-orange cursor-pointer">SERVICES</button>
           <div
             class="absolute group-hover:flex hidden bg-orange whitespace-nowrap flex-col py-5 px-5 gap-1 text-background left-1/2 -translate-x-1/2"
           >
