--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,7 +20,7 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title ? title + ' | Jolilot Atelier' : 'Jolilot Atelier'}</title>
   </head>
-  <body class="flex flex-col bg-background font-extralight">
+  <body class="flex flex-col bg-background font-extralight text-sm">
     <Header />
     <BookAProject />
     <slot />
@@ -28,7 +28,15 @@ const { title } = Astro.props;
   </body>
   <style is:global>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-    @import url('https://use.typekit.net/oxc7dzr.css');
+    /* @import url('https://use.typekit.net/oxc7dzr.css'); */
+
+    @import url('https://use.typekit.net/kia8cjc.css');
+
+    @font-face {
+      font-family: 'Larken';
+      font-display: swap;
+    }
+
     :root {
       font-family: 'Poppins', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
       font-synthesis: none;
