Fix header hamburger menu

--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -130,6 +130,11 @@ function closeMobileMenu() {
     display: flex;
     padding: 0;
   }
+  @media (min-width: 768px) {
+    .menu {
+      display: none;
+    }
+  }
   .line {
     fill: none;
     stroke: currentColor;
