Add seo description

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,10 +14,13 @@ const { title } = Astro.props;
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Astro description" />
-    <meta name="viewport" content="width=device-width" />
+    <meta
+      name="description"
+      content="Je suis Lucie Arcoutel, graphiste indépendante spécialisée dans le print et le digital et fondatrice de Jolilot Atelier, une agence créative située à Alvignac dans le Lot. Avec une passion pour mon métier, je donne vie aux idées de mes clients à travers des outils de communication adaptés et entièrement personnalisés. Que vous ayez besoin de supports imprimés, de sites vitrines, d’identités de marque, de contenu digital ou de conseil et suivi, Jolilot Atelier est là pour vous accompagner. Contactez-moi pour en savoir plus sur les possibilités offertes par mon agence."
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/logo.png" />
-    <meta name="generator" content={Astro.generator} />
+    <meta name="generator" content="Jolilot Atelier" />
     <title>{title ? title + ' | Jolilot Atelier' : 'Jolilot Atelier'}</title>
   </head>
   <body class="flex flex-col bg-background font-extralight text-sm">
