--- a/src/components/AgencyPresentation.astro
+++ b/src/components/AgencyPresentation.astro
@@ -25,7 +25,7 @@ const presentation = Astro.props;
   <Image src={presentation.photo} alt={presentation.alt} class="col-span-5 h-[500px] object-cover" />
   <div class="col-span-7 flex w-full flex-col gap-12 self-end pl-20 md:pl-32">
     <LogoWithProgressBar color={presentation.color} />
-    {presentation.title && <p class="font-larken text-3xl">{presentation.title}</p>}
+    {presentation.title && <h1 class="font-larken text-3xl">{presentation.title}</h1>}
     <div class="mr-20 flex flex-col gap-6 text-justify md:max-w-lg">
       {presentation.description.map((paragraph) => <p>{paragraph}</p>)}
       <div class="flex gap-10 flex-wrap">
