--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,12 +2,6 @@
 import BookAProject from './BookAProject.astro';
 import Footer from './Footer.astro';
 import Header from './Header.astro';
-
-export type Props = {
-  title?: string;
-};
-
-const { title } = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -16,12 +10,16 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Je suis Lucie Arcoutel, graphiste indépendante spécialisée dans le print et le digital et fondatrice de Jolilot Atelier, une agence créative située à Alvignac dans le Lot. Avec une passion pour mon métier, je donne vie aux idées de mes clients à travers des outils de communication adaptés et entièrement personnalisés. Que vous ayez besoin de supports imprimés, de sites vitrines, d’identités de marque, de contenu digital ou de conseil et suivi, Jolilot Atelier est là pour vous accompagner. Contactez-moi pour en savoir plus sur les possibilités offertes par mon agence."
+      content="Que vous ayez besoin de supports imprimés, de sites vitrines, d’identités de marque ou de contenu digital, Jolilot Atelier est là pour vous accompagner."
+    />
+    <meta
+      name="keywords"
+      content="supports imprimés, sites vitrines, identités de marque, contenu digital, Jolilot, Agence, créative, Jolilot Atelier, Lot, communication"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="generator" content="Jolilot Atelier" />
-    <title>{title ? title + ' | Jolilot Atelier' : 'Jolilot Atelier'}</title>
+    <title>{'JOLILOT Atelier | Agence créative'}</title>
   </head>
   <body class="flex flex-col bg-background font-extralight text-sm">
     <Header />
