--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -63,5 +63,10 @@ import Header from './Header.astro';
     ::-webkit-scrollbar-thumb:hover {
       background-color: #aaa;
     }
+
+    .vertical-text {
+      writing-mode: vertical-rl;
+      transform: rotate(180deg);
+    }
   </style>
 </html>
