--- a/src/pages/services/conseil-suivi.astro
+++ b/src/pages/services/conseil-suivi.astro
@@ -3,7 +3,7 @@ import AgencyPresentation, { PresentationProps } from '../../components/AgencyPr
 
 import TypingTitle from '../../components/TypingTitle.astro';
 import Layout from '../../layouts/Layout.astro';
-import Photo from '../../assets/Photo.webp';
+import Photo from '../../assets/1743-Joey-Joe-Ann-Knoester-1.jpg';
 import AgencySteps from '../../components/AgencySteps.astro';
 import AgencyOneService, { OneService } from '../../components/AgencyOneService.astro';
 import AgencyContactForm from '../../components/AgencyContactForm.astro';
@@ -12,8 +12,9 @@ const color = '#dcbf7e';
 const presentation: PresentationProps = {
     photo: Photo,
     color: color,
+    credit: '©JJAKPHOTOGRAPHIE',
     title: 'CONSEIL & SUIVI',
-    alt: 'Photo de presentation du site (un pot de fleur avec de la decoration)',
+    alt: 'Photo de Lucie avec une tablette',
     description: [
         'Un accompagnement exclusif passe avant tout par le conseil. Lors de nos premiers échanges, nous aborderons les démarches à suivre pour votre futur projet de communication. l’Agence vous aiguillera vers la stratégie la plus adpatée pour atteindre vos objectifs.',
         'Lorsqu’un projet de communication est lancé, l’importance du suivi sera primordiale pour sa durabilité.',
