--- a/src/components/AgencyLocation.astro
+++ b/src/components/AgencyLocation.astro
@@ -1,13 +1,14 @@
 ---
 import { Image } from '@astrojs/image/components';
 
-import Photo from '../assets/Photo.webp';
+import PhotoTelephone from '../assets/JOLILOT-69.jpg';
+import PhotoAgence from '../assets/JOLILOT-1 copie.jpg';
 import FranceIcon from './Icons/FranceIcon.astro';
 import Button from './subcomponents/Button.astro';
 ---
 
 <div class="flex justify-center items-center py-32">
-    <div class="flex justify-evenly items-center max-xl:flex-col gap-y-12">
+    <div class="flex justify-evenly items-center max-lg:flex-col gap-y-12">
         <div class="px-14 flex flex-col gap-5 max-w-[650px]">
             <div class="flex flex-col gap-2">
                 <p class="font-larken text-3xl">où se trouve l’agence ?</p>
@@ -25,15 +26,21 @@ import Button from './subcomponents/Button.astro';
                 <div class="sm:-mr-10 max-sm:w-[150px]">
                     <FranceIcon />
                 </div>
-                <div class="max-sm:w-[100px]">
-                    <Image src={Photo} alt="" class="object-cover w-full h-full" />
+                <div class="max-sm:w-[100px] flex gap-1">
+                    <Image src={PhotoAgence} alt="Photo prise de l'agence" class="object-cover w-full h-full" />
+                    <p class="self-end vertical-text text-xs">©2023JulieAlasset</p>
                 </div>
             </div>
         </div>
-        <div class="border h-[300px] border-black max-xl:hidden"></div>
+        <div class="border h-[300px] border-black max-lg:hidden"></div>
         <div class="px-14 flex flex-col gap-6 max-w-[650px]">
-            <div class="mb-9">
-                <Image src={Photo} alt="" class="object-cover w-[175px] h-[175px]" />
+            <div class="mb-9 flex gap-1">
+                <Image
+                    src={PhotoTelephone}
+                    alt="Photo prise de Lucie au téléphone"
+                    class="object-cover w-[150px] h-[250px]"
+                />
+                <p class="self-end vertical-text text-xs">©2023JulieAlasset</p>
             </div>
             <div class="flex flex-col gap-2">
                 <p class="font-larken text-3xl">travaillons ensemble, même à distance !</p>
