--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,16 +1,13 @@
 ---
-import AgencyClientsNumber from '../components/AgencyClientsNumber.astro';
-import AgencyLastProjects from '../components/AgencyLastProjects.astro';
 import AgencyPresentation, { Props } from '../components/AgencyPresentation.astro';
 import TypingTitle from '../components/TypingTitle.astro';
 import Layout from '../layouts/Layout.astro';
-import Photo from '../assets/Photo.webp';
-import AgencyLocation from '../components/AgencyLocation.astro';
-import AgencySteps from '../components/AgencySteps.astro';
+import Photo from '../assets/JOLILOT-47.jpg';
 import AgencyContactForm from '../components/AgencyContactForm.astro';
 
 const presentation: Props = {
     photo: Photo,
+    credit: '©2023JulieAlasset',
     alt: 'Photo de presentation du site (un pot de fleur avec de la decoration)',
     description: [
         'Je suis Lucie, graphiste indépendante spécialisée dans le print et le digital. ',
