--- a/src/components/AgencyLocation.astro
+++ b/src/components/AgencyLocation.astro
@@ -1,8 +1,8 @@
 ---
 import { Image } from '@astrojs/image/components';
 
-import PhotoTelephone from '../assets/JOLILOT-69.jpg';
-import PhotoAgence from '../assets/JOLILOT-1 copie.jpg';
+import PhotoTelephone from '../assets/JOLILOT-69.webp';
+import PhotoAgence from '../assets/JOLILOT-1-copie.webp';
 import FranceIcon from './Icons/FranceIcon.astro';
 import Button from './subcomponents/Button.astro';
 ---
