--- a/src/pages/a-propos.astro
+++ b/src/pages/a-propos.astro
@@ -3,8 +3,8 @@ import AgencyClientsNumber from '../components/AgencyClientsNumber.astro';
 import AgencyPresentation, { Props } from '../components/AgencyPresentation.astro';
 import TypingTitle from '../components/TypingTitle.astro';
 import Layout from '../layouts/Layout.astro';
-import PhotoClientsNumber from '../assets/JOLILOT-21.jpg';
-import PhotoPresentation from '../assets/JOLILOT-58.jpg';
+import PhotoClientsNumber from '../assets/JOLILOT-21.webp';
+import PhotoPresentation from '../assets/JOLILOT-58.webp';
 import AgencyLocation from '../components/AgencyLocation.astro';
 import AgencySteps from '../components/AgencySteps.astro';
 
