--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -2,7 +2,7 @@
 import AgencyPresentation, { Props } from '../components/AgencyPresentation.astro';
 import TypingTitle from '../components/TypingTitle.astro';
 import Layout from '../layouts/Layout.astro';
-import Photo from '../assets/JOLILOT-47.jpg';
+import Photo from '../assets/JOLILOT-47.webp';
 import AgencyContactForm from '../components/AgencyContactForm.astro';
 
 const presentation: Props = {
