--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,8 +6,8 @@ import AgencyServices from '../components/AgencyServices.astro';
 import TypingTitle from '../components/TypingTitle.astro';
 import Layout from '../layouts/Layout.astro';
 
-import PhotoPresentation from '../assets/JOLILOT-16.jpg';
-import PhotoClientsNumber from '../assets/JOLILOT-12.jpg';
+import PhotoPresentation from '../assets/JOLILOT-16.webp';
+import PhotoClientsNumber from '../assets/JOLILOT-12.webp';
 import type { Props } from '../components/AgencyPresentation.astro';
 
 const presentation: Props = {
