--- a/src/pages/services/conseil-suivi.astro
+++ b/src/pages/services/conseil-suivi.astro
@@ -3,7 +3,7 @@ import AgencyPresentation, { PresentationProps } from '../../components/AgencyPr
 
 import TypingTitle from '../../components/TypingTitle.astro';
 import Layout from '../../layouts/Layout.astro';
-import Photo from '../../assets/1743-Joey-Joe-Ann-Knoester-1.jpg';
+import Photo from '../../assets/1743-Joey-Joe-Ann-Knoester-1.webp';
 import AgencySteps from '../../components/AgencySteps.astro';
 import AgencyOneService, { OneService } from '../../components/AgencyOneService.astro';
 import AgencyContactForm from '../../components/AgencyContactForm.astro';
