--- a/src/components/AgencyContactForm.astro
+++ b/src/components/AgencyContactForm.astro
@@ -154,7 +154,7 @@ import Input from './subcomponents/Input.astro';
         width: 1px;
         height: 0px;
     }
-    .progress-vertical-contact {
+    .progress-vertical-contact.animate {
         animation: progress-vertical-contact 2s ease-in-out forwards;
     }
     @keyframes progress-vertical-contact {
