--- a/src/components/TypingTitle.astro
+++ b/src/components/TypingTitle.astro
@@ -1,5 +1,5 @@
 <div class="flex h-72 w-full items-center justify-center">
-  <p class="larken text-4xl font-light">
+  <p class="larken md:text-4xl text-xl font-light">
     <span class="typed-text"></span><span class="cursor blink">&nbsp;</span>
   </p>
 </div>
