--- a/src/components/AgencyLastProjects.astro
+++ b/src/components/AgencyLastProjects.astro
@@ -27,14 +27,14 @@ const projects = [
 ];
 ---
 
-<div class="mb-32">
+<div class="my-28 flex flex-col gap-10">
   <SubTitle title="les dernières réalisations chez jolilot" />
   <div class="relative flex w-full flex-col items-center">
-    <div class="mb-20 grid max-w-[1800px] grid-cols-1 gap-x-36 gap-y-24 px-20 min-[900px]:grid-cols-3">
-      <div class="mt-12">
+    <div class="grid w-full max-w-[1800px] grid-cols-1 gap-x-20 gap-y-24 px-20 min-[900px]:grid-cols-3">
+      <div class="min-[900px]:mt-12">
         <LastProject title={projects[0].title} description={projects[0].description} image={projects[0].image} />
       </div>
-      <div class="mt-24">
+      <div class="min-[900px]:mt-24">
         <LastProject title={projects[1].title} description={projects[1].description} image={projects[1].image} />
       </div>
 
@@ -43,7 +43,7 @@ const projects = [
       </div>
     </div>
   </div>
-  <div class="flex justify-center">
+  <div class="flex justify-center mt-10">
     <Button text="découvrir plus de réalisations" url="/realisations" />
   </div>
 </div>
