--- a/src/components/AgencyLocation.astro
+++ b/src/components/AgencyLocation.astro
@@ -8,8 +8,8 @@ import Button from './subcomponents/Button.astro';
 ---
 
 <div class="flex justify-center items-center py-32">
-    <div class="flex justify-evenly items-center max-lg:flex-col gap-y-12">
-        <div class="px-14 flex flex-col gap-5 max-w-[650px]">
+    <div class="flex justify-evenly items-center max-lg:flex-col gap-y-24">
+        <div class="px-10 flex flex-col gap-5 max-w-[650px]">
             <div class="flex flex-col gap-2">
                 <p class="font-larken text-3xl">où se trouve l’agence ?</p>
                 <p>JOLILOT ATELIER | AGENCE DE COMMUNICATION</p>
@@ -23,16 +23,16 @@ import Button from './subcomponents/Button.astro';
                 </div>
             </div>
             <div class="flex w-full">
-                <div class="sm:-mr-10 max-sm:w-[150px]">
+                <div class="sm:-mr-10 max-sm:w-[130px]">
                     <FranceIcon />
                 </div>
-                <div class="max-sm:w-[100px] flex gap-1">
+                <div class="max-sm:w-[140px] flex gap-1">
                     <Image src={PhotoAgence} alt="Photo prise de l'agence" class="object-cover w-full h-full" />
                     <p class="self-end vertical-text text-xs">©2023JulieAlasset</p>
                 </div>
             </div>
         </div>
-        <div class="border h-[300px] border-black max-lg:hidden"></div>
+        <div class="border-l h-[300px] border-black max-lg:hidden"></div>
         <div class="px-14 flex flex-col gap-6 max-w-[650px]">
             <div class="mb-9 flex gap-1">
                 <Image
