--- a/src/components/AgencyOneService.astro
+++ b/src/components/AgencyOneService.astro
@@ -21,10 +21,10 @@ export type Props = {
 const { oneService } = Astro.props;
 ---
 
-<div>
+<div class="flex flex-col gap-10 my-28">
     <SubTitle title="des services, rien que pour vous !" />
     <div class="relative flex w-full flex-col items-center">
-        <div class="mb-20 grid w-full max-w-[1800px] grid-cols-1 gap-y-24 px-20 md:grid-cols-2 xl:grid-cols-3">
+        <div class="grid w-full max-w-[1800px] grid-cols-1 gap-y-24 px-20 md:grid-cols-2 xl:grid-cols-3">
             <div class="flex gap-6 text-black/90 md:border-r border-black md:pr-12">
                 <div class="flex flex-col gap-3 font-larken">
                     <p class="text-6xl" style={`color: ${oneService.color};`}>{oneService.number}</p>
