--- a/src/components/AgencyPresentation.astro
+++ b/src/components/AgencyPresentation.astro
@@ -23,17 +23,23 @@ const presentation = Astro.props;
 ---
 
 <div class="grid grid-cols-1 gap-y-20 md:grid-cols-12">
-  <div class="col-span-5 flex gap-1">
+  <div class="col-span-5 flex gap-1 w-full">
     <Image src={presentation.photo} alt={presentation.alt} class="h-[500px] object-cover" />
-    <p class="self-end vertical-text text-xs">{presentation.credit}</p>
+    <p class="self-end vertical-text text-xs max-md:hidden">{presentation.credit}</p>
   </div>
   <div class="col-span-7 flex w-full flex-col gap-12 self-end pl-20 md:pl-32">
     <LogoWithProgressBar color={presentation.color} />
-    {presentation.title && <h1 class="font-larken text-3xl">{presentation.title}</h1>}
-    <div class="mr-20 flex flex-col gap-6 text-justify md:max-w-lg">
-      {presentation.description.map((paragraph) => <p>{paragraph}</p>)}
-      <div class="flex gap-10 flex-wrap">
-        {presentation.buttons?.map((button) => <Button text={button.text} url={button.url} variant={button.variant} />)}
+    <div class="pr-16 flex w-full flex-col gap-12">
+      {presentation.title && <h1 class="font-larken text-3xl">{presentation.title}</h1>}
+      <div class="flex flex-col gap-6 text-justify md:max-w-lg">
+        {presentation.description.map((paragraph) => <p>{paragraph}</p>)}
+        <div class="flex gap-x-10 flex-wrap">
+          {
+            presentation.buttons?.map((button) => (
+              <Button text={button.text} url={button.url} variant={button.variant} />
+            ))
+          }
+        </div>
       </div>
     </div>
   </div>
