--- a/src/components/AgencySteps.astro
+++ b/src/components/AgencySteps.astro
@@ -65,7 +65,7 @@ const services: Service[] = [
 ---
 
 <div
-  class="bg-marron_fonce text-white py-10"
+  class="bg-marron_fonce text-white py-20 flex flex-col gap-y-14"
   style={{
     backgroundColor: bgColor,
     color: textColor,
@@ -73,7 +73,7 @@ const services: Service[] = [
 >
   <SubTitle title="jolilot c’est aussi simple que ça !" />
   <div class="relative flex w-full flex-col items-center">
-    <div class="mb-20 grid w-full max-w-[1800px] grid-cols-1 gap-x-16 gap-y-24 px-20 md:grid-cols-2 xl:grid-cols-4">
+    <div class="grid w-full max-w-[1800px] grid-cols-1 gap-x-16 gap-y-24 px-20 md:grid-cols-2 xl:grid-cols-4">
       {services.map((service) => <OneService {...service} />)}
     </div>
   </div>
