--- a/src/components/subcomponents/LastProject.astro
+++ b/src/components/subcomponents/LastProject.astro
@@ -16,7 +16,7 @@ const { image, title, description } = Astro.props;
     >
     </div>
   </div>
-  <div class="flex max-w-xs flex-col gap-4">
+  <div class="flex flex-col gap-4">
     <Image
       src={image}
       alt="Photo de fond(un pot de fleur avec de la decoration)"
