--- a/src/components/subcomponents/SubTitle.astro
+++ b/src/components/subcomponents/SubTitle.astro
@@ -6,7 +6,7 @@ export type Props = {
 const { title } = Astro.props;
 ---
 
-<div class="mt-10 h-[300px]">
+<div>
   <div class="flex h-full w-full items-center justify-center">
     <div class="grid w-full max-w-[1800px] grid-cols-1 gap-y-5 px-20">
       <p class="max-w-[400px] font-larken text-4xl">{title}</p>
