Change Button, and talled presentation image

--- a/src/components/AgencyLocation.astro
+++ b/src/components/AgencyLocation.astro
@@ -32,7 +32,7 @@ import Button from './subcomponents/Button.astro';
                 </div>
             </div>
         </div>
-        <div class="border-l h-[300px] border-black max-lg:hidden"></div>
+        <div class="h-[300px] max-lg:hidden"></div>
         <div class="px-14 flex flex-col gap-6 max-w-[650px]">
             <div class="mb-9 flex gap-1">
                 <Image
