--- a/src/components/AgencyLocation.astro
+++ b/src/components/AgencyLocation.astro
@@ -28,7 +28,12 @@ import Button from './subcomponents/Button.astro';
                 </div>
                 <div class="max-sm:w-[140px] flex gap-1">
                     <Image src={PhotoAgence} alt="Photo prise de l'agence" class="object-cover w-full h-full" />
-                    <p class="self-end vertical-text text-xs">©2023JulieAlasset</p>
+                    <a
+                        target="_blank"
+                        rel="noopener"
+                        href="https://www.thewildthings.fr/"
+                        class="self-end vertical-text text-[8px]">©2023JulieAlasset</a
+                    >
                 </div>
             </div>
         </div>
@@ -40,7 +45,12 @@ import Button from './subcomponents/Button.astro';
                     alt="Photo prise de Lucie au téléphone"
                     class="object-cover w-[150px] h-[250px]"
                 />
-                <p class="self-end vertical-text text-xs">©2023JulieAlasset</p>
+                <a
+                    target="_blank"
+                    rel="noopener"
+                    href="https://www.thewildthings.fr/"
+                    class="self-end vertical-text text-[8px]">©2023JulieAlasset</a
+                >
             </div>
             <div class="flex flex-col gap-2">
                 <p class="font-larken text-3xl">travaillons ensemble, même à distance !</p>
