--- a/src/components/TypingTitle.astro
+++ b/src/components/TypingTitle.astro
@@ -8,7 +8,7 @@
   const typedText = document.querySelector('.typed-text');
   const cursor = document.querySelector('.cursor');
 
-  const textArray = ['votre agence créative lotoise'];
+  const textArray = ['votre agence créative lotoise', 'une communication qui fait sens'];
 
   let textArrayIndex = 0;
   let charIndex = 0;
