--- a/src/components/subcomponents/Input.astro
+++ b/src/components/subcomponents/Input.astro
@@ -10,5 +10,5 @@ const { label, ...props } = Astro.props;
 
 <div class="flex flex-col gap-1">
     <label class="font-medium">{label}</label>
-    <input class="w-full border-b rounded-none border-black bg-inherit focus:outline-none pl-4 py-2" {...props} />
+    <input class="w-full border-b rounded-none border-black/30 bg-inherit focus:outline-none pl-4 py-2" {...props} />
 </div>
