--- a/src/pages/services/conseil-suivi.astro
+++ b/src/pages/services/conseil-suivi.astro
@@ -12,7 +12,10 @@ const color = '#dcbf7e';
 const presentation: PresentationProps = {
     photo: Photo,
     color: color,
-    credit: '©JJAKPHOTOGRAPHIE',
+    credit: {
+        name: '©JJAKPHOTOGRAPHIE',
+        url: 'https://joeyjoe-annknoester.com/',
+    },
     title: 'CONSEIL & SUIVI',
     alt: 'Photo de Lucie avec une tablette',
     description: [
