--- a/src/components/subcomponents/OneService.astro
+++ b/src/components/subcomponents/OneService.astro
@@ -14,6 +14,8 @@ export type Service = {
 };
 export type Props = Service;
 const { number, title, subtitle, description, buttonText, buttonLink, color, textColor, isButton } = Astro.props;
+
+console.log;
 ---
 
 <div class="flex gap-6 text-black/90">
@@ -31,7 +33,19 @@ const { number, title, subtitle, description, buttonText, buttonLink, color, tex
     <div class="flex flex-col gap-3" style={`color: ${textColor};`}>
       {description.map((item) => <p class="font-poppins text-sm">{item}</p>)}
     </div>
-    {isButton && <Button url={buttonLink} color={color} text={buttonText ? buttonText : "c'est ce qu'il me faut"} />}
+    {
+      isButton &&
+        (color === '#cc9f5c' ? (
+          <a
+            class="mt-2 w-fit border border-[#cc9f5c] px-8 py-2 font-poppins md:text-sm text-xs text-[#cc9f5c] transition ease-in-out hover:bg-orange hover:text-white"
+            href={buttonLink}
+          >
+            {buttonText ? buttonText : "c'est ce qu'il me faut"}
+          </a>
+        ) : (
+          <Button url={buttonLink} color={color} text={buttonText ? buttonText : "c'est ce qu'il me faut"} />
+        ))
+    }
   </div>
 </div>
 
