Change typing typo

--- a/src/components/TypingTitle.astro
+++ b/src/components/TypingTitle.astro
@@ -1,5 +1,5 @@
 <div class="flex h-72 w-full items-center justify-center">
-  <p class="larken md:text-4xl text-xl font-light">
+  <p class="font-larken md:text-4xl text-xl font-light">
     <span class="typed-text"></span><span class="cursor blink">&nbsp;</span>
   </p>
 </div>
@@ -69,12 +69,5 @@
     50% {
       background: transparent;
     }
-  }
-  .larken {
-    font-family: 'larken', sans-serif;
-
-    font-weight: 400;
-
-    font-style: normal;
   }
 </style>
