--- a/src/components/subcomponents/Button.astro
+++ b/src/components/subcomponents/Button.astro
@@ -28,7 +28,7 @@ const { url, text, color, variant } = Astro.props;
     </a>
   ) : (
     <a
-      class="mt-2 w-fit border border-black/20 px-8 py-2 font-poppins md:text-sm text-xs text-black/60 transition ease-in-out hover:bg-marron_fonce hover:text-white"
+      class="mt-2 w-fit border border-black/20 hover:border-marron_fonce px-8 py-2 font-poppins md:text-sm text-xs text-black/60 transition ease-in-out hover:bg-marron_fonce hover:text-white"
       href={url}
       style={`color: ${color};border-color: ${color};`}
     >
