--- a/src/layouts/BookAProject.astro
+++ b/src/layouts/BookAProject.astro
@@ -2,7 +2,7 @@
     href="/contact#contact-form"
     class="fixed top-48 right-0 bg-marron_fonce w-10 z-20 hover:bg-orange h-44 font-light flex items-center justify-center"
 >
-    <p class="text-background vertical-text">RESERVER UN PROJET</p>
+    <p class="text-background vertical-text">RÉSERVER UN PROJET</p>
 </a>
 
 <style>
