--- a/src/components/AgencyPresentation.astro
+++ b/src/components/AgencyPresentation.astro
@@ -35,7 +35,7 @@ const presentation = Astro.props;
       class="self-end vertical-text text-[8px] max-md:hidden">{presentation.credit?.name}</a
     >
   </div>
-  <div class="col-span-7 flex w-full flex-col gap-12 self-end md:pl-20">
+  <div class="col-span-7 flex w-full flex-col gap-12 self-end pl-20">
     <LogoWithProgressBar color={presentation.color} />
     <div class="pr-16 flex w-full flex-col gap-12">
       {presentation.title && <h1 class="font-larken text-3xl">{presentation.title}</h1>}
