Change padding on every page for mobile

--- a/src/components/AgencyLastProjects.astro
+++ b/src/components/AgencyLastProjects.astro
@@ -30,7 +30,7 @@ const projects = [
 <div class="my-28 flex flex-col gap-10">
   <SubTitle title="les dernières réalisations chez jolilot" />
   <div class="relative flex w-full flex-col items-center">
-    <div class="grid w-full max-w-[1800px] grid-cols-1 gap-x-20 gap-y-24 px-20 min-[900px]:grid-cols-3">
+    <div class="grid w-full max-w-[1800px] grid-cols-1 gap-x-20 gap-y-24 px-10 md:px-20 min-[900px]:grid-cols-3">
       <div class="min-[900px]:mt-12">
         <LastProject title={projects[0].title} description={projects[0].description} image={projects[0].image} />
       </div>
