--- a/src/components/AgencyContactForm.astro
+++ b/src/components/AgencyContactForm.astro
@@ -4,7 +4,7 @@ import Input from './subcomponents/Input.astro';
 
 <div id="contact-form" class="grid grid-cols-1 gap-y-20 md:grid-cols-12 py-56">
     <div class="col-span-5 w-full flex justify-end">
-        <div class="flex gap-10 md:max-w-xl md:pl-20 px-10">
+        <div class="flex md:gap-10 gap-6 md:max-w-xl md:pl-20 px-10">
             <div class="progress-vertical-contact relative mt-4 bg-black/90">
                 <div
                     class="absolute bottom-0 left-1/2 h-4 w-4 -translate-x-1/2 translate-y-full overflow-hidden rounded-full border border-black"
