--- a/src/components/AgencyPresentation.astro
+++ b/src/components/AgencyPresentation.astro
@@ -35,11 +35,11 @@ const presentation = Astro.props;
       class="self-end vertical-text text-[8px] max-md:hidden">{presentation.credit?.name}</a
     >
   </div>
-  <div class="col-span-7 flex w-full flex-col gap-12 self-end pl-20">
+  <div class="col-span-7 flex w-full flex-col gap-12 self-end pl-10 md:pl-20">
     <LogoWithProgressBar color={presentation.color} />
-    <div class="pr-16 flex w-full flex-col gap-12">
+    <div class="pr-11 flex w-full flex-col gap-12">
       {presentation.title && <h1 class="font-larken text-3xl">{presentation.title}</h1>}
-      <div class="flex flex-col gap-6 text-justify md:max-w-lg">
+      <div class="flex flex-col gap-6 md:max-w-lg">
         {presentation.description.map((paragraph) => <p>{paragraph}</p>)}
         <div class="flex gap-x-10 flex-wrap">
           {
