--- a/src/components/subcomponents/SubTitle.astro
+++ b/src/components/subcomponents/SubTitle.astro
@@ -8,7 +8,7 @@ const { title } = Astro.props;
 
 <div>
   <div class="flex h-full w-full items-center justify-center">
-    <div class="grid w-full max-w-[1800px] grid-cols-1 gap-y-5 px-20">
+    <div class="grid w-full max-w-[1800px] grid-cols-1 gap-y-5 px-10 md:px-20">
       <p class="max-w-[400px] font-larken text-4xl">{title}</p>
       <p class="text-sm">JOLILOT | AGENCE DE COMMUNICATION | LOTOISE</p>
     </div>
