Change vertical animation to work on Mac (Need test)

--- a/src/components/AgencyLastProjects.astro
+++ b/src/components/AgencyLastProjects.astro
@@ -44,6 +44,6 @@ const projects = [
     </div>
   </div>
   <div class="flex justify-center mt-10">
-    <Button text="découvrir plus de réalisations" url="/realisations" />
+    <Button text="découvrir plus de réalisations" variant="dark" url="/realisations" />
   </div>
 </div>
