--- a/src/components/subcomponents/LastProject.astro
+++ b/src/components/subcomponents/LastProject.astro
@@ -10,7 +10,7 @@ const { image, title, description } = Astro.props;
 ---
 
 <div class="flex gap-6 text-black/90">
-  <div class="progress-vertical-one-service relative mt-[100px] bg-black/90">
+  <div class="progress-vertical-one-service relative mt-[100px] bg-black/90 border-black/90 border-l rounded-none">
     <div
       class="absolute bottom-0 left-1/2 h-4 w-4 -translate-x-1/2 translate-y-full overflow-hidden rounded-full border border-black"
     >
