--- a/src/layouts/BookAProject.astro
+++ b/src/layouts/BookAProject.astro
@@ -1,6 +1,6 @@
 <a
     href="/contact#contact-form"
-    class="fixed top-48 right-0 bg-marron_fonce w-10 z-20 hover:bg-orange h-44 font-light flex items-center justify-center"
+    class="fixed top-48 right-0 hover:bg-marron_fonce w-10 z-20 bg-orange h-44 font-light flex items-center justify-center"
 >
     <p class="text-background vertical-text">RÉSERVER UN PROJET</p>
 </a>
