--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -1,30 +1,13 @@
 ---
 import LogoIcon from '../components/Icons/LogoIcon.astro';
-import { Image } from '@astrojs/image/components';
 
-import Insta1 from '../assets/INSTA/1.jpg';
-import Insta2 from '../assets/INSTA/2.jpg';
-import Insta3 from '../assets/INSTA/3.jpg';
-
-const PostsInstagram = [
-  {
-    url: 'https://www.instagram.com/p/CpSPcYJMCf2/',
-    image: Insta1,
-  },
-  {
-    url: 'https://www.instagram.com/p/Cop7O1YOciK/',
-    image: Insta2,
-  },
-  {
-    url: 'https://www.instagram.com/p/CnJststMdVN/',
-    image: Insta3,
-  },
-];
+import InstragramIcon from '../components/Icons/InstragramIcon.astro';
+import SubFooter from './SubFooter.astro';
 ---
 
 <div>
-  <div class="grid w-full items-center gap-y-10 bg-orange py-10 text-white/80 xl:grid-cols-2">
-    <div class="relative flex h-full items-center justify-center max-xl:row-start-2">
+  <div class="grid w-full items-center gap-y-10 bg-orange py-10 text-white/80 md:grid-cols-2">
+    <div class="relative flex h-full items-center justify-center max-md:row-start-2">
       <a href="/" aria-label="Retour a la page d'accueil">
         <LogoIcon classes="max-w-[190px] w-[190px] min-w-[190px] py-20" /></a
       >
@@ -35,116 +18,34 @@ const PostsInstagram = [
           target="_blank"
           referrerpolicy="no-referrer"
         >
-          <svg
-            id="Calque_1"
-            xmlns="http://www.w3.org/2000/svg"
-            xmlns:xlink="http://www.w3.org/1999/xlink"
-            viewBox="0 0 88.29 88.69"
-            class="px- h-20 w-20 px-5"
-          >
-            <style>
-              .cls-1 {
-                fill: none;
-              }
-
-              .cls-2 {
-                clip-path: url(#clippath);
-              }
-
-              .cls-3 {
-                fill: white;
-              }
-            </style>
-            <g class="cls-2">
-              <path
-                class="cls-3"
-                d="m36.86,63.66c-6.43,0-11.63-5.21-11.63-11.63v-14.49c0-6.43,5.21-11.63,11.63-11.63h14.49c6.43,0,11.63,5.21,11.63,11.63v14.49c0,6.43-5.21,11.63-11.63,11.63h-14.49Zm30.61-9.91v-17.94c0-7.95-6.44-14.39-14.39-14.39h-17.94c-7.95,0-14.39,6.44-14.39,14.39v17.94c0,7.95,6.44,14.39,14.39,14.39h17.94c7.95,0,14.39-6.44,14.39-14.39"
-              ></path>
-              <path
-                class="cls-3"
-                d="m36.62,45.41c0-4.09,3.31-7.41,7.4-7.41s7.41,3.32,7.41,7.41-3.31,7.41-7.41,7.41-7.4-3.32-7.4-7.41m19.71,0c0-6.8-5.51-12.31-12.31-12.31s-12.3,5.51-12.3,12.31,5.51,12.31,12.3,12.31,12.31-5.51,12.31-12.31"
-              ></path>
-              <path
-                class="cls-3"
-                d="m59.65,56.86c0-1.72-1.41-3.13-3.13-3.13s-3.13,1.41-3.13,3.13,1.41,3.13,3.13,3.13,3.13-1.41,3.13-3.13"
-              ></path>
-              <path
-                class="cls-3"
-                d="m16.67,74.91c-.36-1.21-1.71-1.89-2.76-2.47-.96-.51-2.06-1.53-3.17-1.53-.37,0-.65.36-.55.72.3,1.07,1.56,1.88,2.31,2.66.84.86,1.85,2,3.11,2.03.7.01,1.27-.72,1.06-1.41"
-              ></path>
-              <path
-                class="cls-3"
-                d="m41,87.9c21.24,5.26,42.72-16.69,46.49-36.65,2.07-10.97.1-22.38-6-31.75-5.23-8.04-14.53-16.26-24.36-17.27-.22-.02-.4.05-.55.14-16.25-6.32-36.67.57-46.98,14.45C-.61,30.6-4.2,53.23,6.48,67.86c.9,1.23,2.69.21,2.04-1.21-.24-.52-.49-1.06-.73-1.58.47-.27.77-.83.43-1.51-4.62-9.75-2.28-23.28,1.15-32.92.38-1.08-1.35-1.83-1.85-.79-2.49,5.14-3.95,10.71-4.25,16.43-.13,2.39-.05,4.79.21,7.16-.91-3.63-1.34-7.4-.98-11.44.75-8.2,3.81-15.45,8.34-22.24,5.31-7.94,11.79-13.38,21.05-15.96,8.02-2.22,16.48-2.34,24.42.12.08.12.17.21.3.28.8.43,1.61.85,2.4,1.27-6.29-2.45-13.25-3.17-19.92-2.07-12.6,2.08-20.94,9.19-27.78,19.65-.82,1.26,1.29,2.52,1.99,1.18C18.23,14.93,29.42,7.56,39.66,6.01c11.31-1.72,21.91,2.39,30.9,9.11.77.57,1.61-.64,1-1.29-1.04-1.11-2.15-2.13-3.32-3.07,2.32,1.55,4.5,3.27,6.52,5.33-.79-.47-2,.29-1.39,1.25,1.57,2.45,3.24,4.8,4.66,7.34,1.02,1.81,1.84,3.73,2.76,5.58-.09.3-.1.65-.01,1.05,3.42,13.46,1.94,26.86-7.88,37.34-.38.41-.21.91.14,1.15-.5-.09-1.07.17-1.07.83,0,1.13,1.75,1.14,1.75,0,0-.33-.14-.55-.34-.69.2.02.41-.02.59-.21,3.69-3.49,6.78-7.91,8.93-12.75-5.19,14.17-17.88,25.96-32.53,27.66,4.68-1.06,9.2-3,13.29-5.87,1.04-.72.14-2.34-.99-1.72-6.98,3.81-14.59,5.6-22.49,5.86-8.25.27-15.28-2.95-22.08-7.33-.7-.44-1.54.58-.97,1.15-.14.27-.14.59.12.87,5.9,6.34,14.76,10.96,23.62,10.34.05-.01.08-.02.13-.03"
-              ></path>
-              <path
-                class="cls-3"
-                d="m10.26,26.37c-.65-.28-1.29.09-1.53.73-.16.48-.33.91-.38,1.41-.1.86,1.06,1.18,1.58.66.35-.34.59-.79.86-1.19.38-.57.05-1.37-.54-1.62"
-              ></path>
-            </g>
-          </svg>
+          <InstragramIcon />
         </a>
       </div>
     </div>
-    <div class="grid grid-cols-6">
-      <div class="col-span-5 col-start-3 grid h-fit grid-cols-1 gap-y-5 text-sm min-[400px]:col-start-2 sm:grid-cols-3">
-        <div class="flex max-w-xs select-none flex-col gap-3">
-          <p class="font-larken">LES SERVICES</p>
-          <a href="/services/supports-imprimes" class="w-fit hover:text-marron_fonce">SUPPORT IMPRIMÉS</a>
-          <a href="/services/site-web" class="w-fit hover:text-marron_fonce">SITE WEB VITRINE</a>
-          <a href="/services/identite-visuelle" class="w-fit hover:text-marron_fonce">IDENTITÉ VISUELLE</a>
-          <a href="/services/contenu-digital" class="w-fit hover:text-marron_fonce">CONTENU DIGITAL</a>
-          <a href="/services/conseil-suivi" class="w-fit hover:text-marron_fonce">CONSEIL & SUIVI</a>
-        </div>
-        <div class="col-span-2 flex flex-col justify-between gap-y-4">
-          <div class="grid max-w-md grid-cols-1 gap-y-5 sm:grid-cols-2">
-            <div class="flex flex-col gap-3 select-none">
-              <p class="font-larken">EN SAVOIR PLUS</p>
-              <a href="/a-propos" class="w-fit hover:text-marron_fonce">À PROPOS</a>
-              <a href="/realisation" class="w-fit hover:text-marron_fonce">RÉALISATIONS</a>
-              <a href="/contact" class="w-fit hover:text-marron_fonce">CONTACT</a>
-            </div>
-            <div class="flex flex-col gap-3">
-              <p class="font-larken">HORAIRES</p>
-              <p>Du lundi au vendredi</p>
-              <p>9:00 - 12:00 | 14:00 - 18:00</p>
-            </div>
-          </div>
-          <div class="flex w-full justify-end pb-3">
-            <div class="progress-footer relative bg-white">
-              <div
-                class="absolute left-0 top-1/2 h-4 w-4 -translate-x-full -translate-y-1/2 overflow-hidden rounded-full border border-white"
-              >
-              </div>
-            </div>
-          </div>
-        </div>
+
+    <div class="flex justify-center gap-8 xl:max-w-2xl flex-wrap items-center max-sm:text-center">
+      <div class="flex select-none flex-col gap-3 w-[200px]">
+        <p class="font-larken">LES SERVICES</p>
+        <a href="/services/supports-imprimes" class="hover:text-marron_fonce">SUPPORT IMPRIMÉS</a>
+        <a href="/services/site-web" class="hover:text-marron_fonce">SITE WEB VITRINE</a>
+        <a href="/services/identite-visuelle" class="hover:text-marron_fonce">IDENTITÉ VISUELLE</a>
+        <a href="/services/contenu-digital" class="hover:text-marron_fonce">CONTENU DIGITAL</a>
+        <a href="/services/conseil-suivi" class="hover:text-marron_fonce">CONSEIL & SUIVI</a>
+      </div>
+      <div class="flex flex-col gap-3 select-none w-[200px]">
+        <p class="font-larken">EN SAVOIR PLUS</p>
+        <a href="/a-propos" class="hover:text-marron_fonce">À PROPOS</a>
+        <a href="/realisation" class="hover:text-marron_fonce">RÉALISATIONS</a>
+        <a href="/contact" class="hover:text-marron_fonce">CONTACT</a>
+      </div>
+      <div class="flex flex-col gap-3 w-[200px]">
+        <p class="font-larken">HORAIRES</p>
+        <p>Du lundi au vendredi</p>
+        <p>9:00 - 12:00 | 14:00 - 18:00</p>
       </div>
     </div>
   </div>
-  <div class="flex justify-center pt-20 pb-16">
-    <div class="flex w-full max-w-7xl flex-col gap-7">
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-4 px-10 items-center">
-        <div class="flex flex-col items-center">
-          <p class="font-larken text-3xl">suivre toute l'actualité jolilot</p>
-          <p>@jolilot.atelier</p>
-        </div>
-        <div class="md:col-span-2 sm:flex-row flex-col flex gap-3">
-          {
-            PostsInstagram.map((post) => (
-              <a rel="noreferrer" class="hover:opacity-70" href={post.url} target="_blank" referrerpolicy="no-referrer">
-                <Image src={post.image} alt="Photo 1 instagram" class="object-cover aspect-square" />
-              </a>
-            ))
-          }
-        </div>
-      </div>
-      <div class="w-ful flex justify-evenly border-t border-black/90 pt-7 md:flex-row flex-col items-center gap-y-5">
-        <p>© 2023 Jolilot Atelier I Lucie Arcoutel I Mentions légales</p>
-        <LogoIcon classes="w-[100px]" />
-        <p>Cette année Jolilot soutient l’association AFTC.LOT</p>
-      </div>
-    </div>
-  </div>
+  <SubFooter />
 </div>
 
 <style>
