Change footer icon

--- a/src/layouts/SubFooter.astro
+++ b/src/layouts/SubFooter.astro
@@ -6,6 +6,7 @@ import LogoIcon from '../components/Icons/LogoIcon.astro';
 import Insta1 from '../assets/INSTA/1.jpg';
 import Insta2 from '../assets/INSTA/2.jpg';
 import Insta3 from '../assets/INSTA/3.jpg';
+import AFTCIcon from '../components/Icons/AFTCIcon.astro';
 const PostsInstagram = [
     {
         url: 'https://www.instagram.com/p/CpSPcYJMCf2/',
@@ -60,9 +61,7 @@ const PostsInstagram = [
                         referrerpolicy="no-referrer">AFTC.LOT</a
                     >
                 </p>
-                <a href="https://aftc-lot.fr/" target="_blank" referrerpolicy="no-referrer"
-                    ><img src="/public/assets/LOGO FOOTER.svg" alt="Logo AFTC.LOT" class="w-9" /></a
-                >
+                <a href="https://aftc-lot.fr/" target="_blank" referrerpolicy="no-referrer"><AFTCIcon /></a>
             </div>
         </div>
     </div>
